Add capability to AssetConnectionManager to update connections at runtime